@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Dump/Data-Dump-1.15.ebuild,v 1.1 2009/08/02 18:58:55 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=GAAS
+inherit perl-module
+
+DESCRIPTION="Pretty printing of data structures"
+
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+SRC_TEST=do
