@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Data-Dump
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Dump/ChangeLog,v 1.1 2009/06/30 14:02:17 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Data-Dump/ChangeLog,v 1.2 2009/08/02 18:58:55 tove Exp $
+
+*Data-Dump-1.15 (02 Aug 2009)
+
+  02 Aug 2009; Torsten Veller <tove@gentoo.org> +Data-Dump-1.15.ebuild:
+  Version bump
 
 *Data-Dump-1.14 (30 Jun 2009)
 
